2002-03-10  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b26

	* Fixed bug introduced in 1.2.6-cvs-b25 where configuration
	  failed due to the setup script not including the new 
	  LoggedInUser class.

2002-03-08  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b25

	* Added the oft-requested support for "logged in user" permissions.
	  You can now restrict an album's various perms to any user that is
	  logged in.  I originally checked this into v1.2.6-cvs-b24 but there
	  was an error so I've burned that build.

2002-03-07  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b23

	* Now left-align the text below thumbnails in the album page. Looks
	  a little cleaner.

	* Fixed a bug in view_album where the invisible elements of the 
	  admin commands forms below each thumbnail were being output, even 
	  when the user was not an admin (was not a security issue, but a 
	  waste of bandwidth)
.
2002-03-07  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b22

	* Thumbnails in albums are now rendered with html_wrap files. The
	  default implementation of the nested album thumbnail now has a 
	  distinct look, like a stack of photos, to distinguish it from 
	  photo thumbnails. This feature inspired by work from Kees van den
	  Broek, Jesse Mullan and JPK.

2002-03-07  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b21

	* Fixed a very minor bug in add_photos that would cause the "number of
	  boxes" dropdown not to work if file_uploads is disabled.

	* Work around a bug in PHP 4.2.0-dev where session_is_registered()
	  apparently does not work as advertised.  This fixes a bug where folks
	  are unable to log on (but only in PHP 4.2.0-dev as far as I can
	  tell.)

	* Made Album's load method more robust.  Now it will check the object
	  that it deserialized to make sure that it's an instance of the Album
	  class.  If it's not, then we'll go immediately to the backup file.
	  Before we used to only go to the backup file if the album.dat file