@@ -1,3 +1,8 @@
+2002-03-10  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b27
+
+	* Cleaned up the caption-left-align in the view_album page so
+	  that the thumbnail images are once again centered on the page.
+
 2002-03-10  Chris Smith  <chris@jacko.com> 1.2.6-cvs-b26
 
 	* Fixed bug introduced in 1.2.6-cvs-b25 where configuration
